--- a/app/app.global.css
+++ b/app/app.global.css
@@ -1,11 +1,17 @@
+html {
+  height: 100%;
+}
+
 body {
   position: relative;
   color: white;
-  height: 100vh;
-  background-color: #232C39;
-  background-image: linear-gradient(45deg, rgba(0, 216, 255, .5) 10%, rgba(0, 1, 127, .7));
+  background-color: #464368;
+  /*background-image: linear-gradient(45deg, rgba(0, 216, 255, .5) 10%, rgba(0, 1, 127, .7));*/
   font-family: Arial, Helvetica, Helvetica Neue;
   overflow-y: hidden;
+  font-family: "Jigsaw Medium";
+  font-style: normal;
+  font-weight: normal;
 }
 
 h2 {
@@ -14,6 +20,34 @@ h2 {
   font-weight: bold;
   letter-spacing: -.025em;
   color: #fff;
+}
+
+.jigsaw-light {
+  font-family: "Jigsaw Light";
+  font-style: normal;
+  font-weight: normal;
+  font-stretch: normal;
+}
+
+.jigsaw-regular {
+  font-family: "Jigsaw Regular";
+  font-style: normal;
+  font-weight: normal;
+  font-stretch: normal;
+}
+
+.jigsaw-medium {
+  font-family: "Jigsaw Medium";
+  font-style: normal;
+  font-weight: normal;
+  font-stretch: normal;
+}
+
+.jigsaw-bold {
+  font-family: "Jigsaw Bold";
+  font-style: normal;
+  font-weight: normal;
+  font-stretch: normal;
 }
 
 p {
