--- a/app/app.global.css
+++ b/app/app.global.css
@@ -6,7 +6,8 @@ body {
   position: relative;
   color: white;
   background-color: #464368;
-  /*background-image: linear-gradient(45deg, rgba(0, 216, 255, .5) 10%, rgba(0, 1, 127, .7));*/
+  /*background-color: #f6db35;*/
+  /*background-image: linear-gradient(45deg, rgba(0, 0, 0, .5) 10%, rgba(251, 10, 42, .7));*/
   font-family: Arial, Helvetica, Helvetica Neue;
   overflow-y: hidden;
   font-family: "Jigsaw Medium";
