--- a/app/app.global.css
+++ b/app/app.global.css
@@ -13,6 +13,7 @@ body {
   font-family: "Jigsaw Medium";
   font-style: normal;
   font-weight: normal;
+  margin: 0;
 }
 
 h2 {
@@ -73,4 +74,57 @@ a:hover {
   opacity: 1;
   text-decoration: none;
   cursor: pointer;
+}
+
+/* Buttons */
+
+.buttonContainer {
+   width: 100%;
+   min-width: 240px;
+   margin: 0 auto;
+   margin-right: 20px;
+   margin-bottom: 20px;
+   margin-top: 30px;
+   padding: 10px;
+   background-color: #343157;
+   border: 1px solid #343157;
+   border-radius: 4px;
+   box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.25);
+}
+
+.buttonContainer div {
+   -webkit-user-select: none;
+   cursor: pointer;
+   display: block;
+   padding-left: 30px;
+   padding-right: 30px;
+   padding-top: 18px;
+   padding-bottom: 15px;
+   border-radius: 2px;
+   text-align: center;
+   font-size: 18px;
+   transition: none;
+   position: relative;
+   color: white;
+   background-color: #5B5582;
+   box-shadow: 0 3px 0 0 #302d44;
+   margin-bottom: 5px;
+}
+
+.buttonContainer div:active {
+   box-shadow:inset 0 1px 1px 1px #302d44;
+   transform: translate(0px, 3px);
+   outline: 0;
+}
+
+.buttonContainer .buttonAction {
+   background-color: #45A565;
+   box-shadow: 0 3px 0 0 #1f4b2e;
+   margin-bottom: 15px;
+}
+
+.buttonContainer .buttonAction div:active {
+   box-shadow:inset 0 1px 1px 1px #1f4b2e;
+   transform: translate(0px, 3px);
+   outline: 0;
 }
