--- a/app/app.global.css
+++ b/app/app.global.css
@@ -14,6 +14,7 @@ body {
   font-style: normal;
   font-weight: normal;
   margin: 0;
+  height: 100%;
 }
 
 h2 {
@@ -117,13 +118,23 @@ a:hover {
    outline: 0;
 }
 
-.buttonContainer .buttonAction {
+.buttonContainer .buttonPrimary {
    background-color: #45A565;
    box-shadow: 0 3px 0 0 #1f4b2e;
-   margin-bottom: 15px;
 }
 
-.buttonContainer .buttonAction div:active {
+.buttonContainer .buttonPrimary div:active {
+   box-shadow:inset 0 1px 1px 1px #1f4b2e;
+   transform: translate(0px, 3px);
+   outline: 0;
+}
+
+.buttonContainer .buttonSecondary {
+  background-color: #58A1FF;
+  box-shadow: 0 2px 0 0 #2584ff;
+}
+
+.buttonContainer .buttonSecondary div:active {
    box-shadow:inset 0 1px 1px 1px #1f4b2e;
    transform: translate(0px, 3px);
    outline: 0;
