--- a/app/app.global.css
+++ b/app/app.global.css
@@ -5,7 +5,7 @@ html {
 body {
   position: relative;
   color: white;
-  background-color: #464368;
+  background: #464368;
   /*background-color: #f6db35;*/
   /*background-image: linear-gradient(45deg, rgba(0, 0, 0, .5) 10%, rgba(251, 10, 42, .7));*/
   font-family: Arial, Helvetica, Helvetica Neue;
@@ -138,4 +138,18 @@ a:hover {
    box-shadow:inset 0 1px 1px 1px #1f4b2e;
    transform: translate(0px, 3px);
    outline: 0;
+}
+
+.buttonContainer.circleContainer {
+  display: inline-block;
+  width: auto;
+  min-width: 0;
+  background: none;
+  border: none;
+  box-shadow: none;
+}
+
+.buttonContainer .circle {
+  display: inline-block;
+  border-radius: 50px;
 }
