--- a/app/components/CreateBet/Game.css
+++ b/app/components/CreateBet/Game.css
@@ -1,8 +1,14 @@
 .container {
-   margin: 10px auto;
-   width: 80%;
+   padding: 10px;
    display: table;
    white-space: nowrap;
+   cursor: pointer;
+   box-shadow: 0 1px 2px rgba(0,0,0,0.15);
+   transition: box-shadow 0.3s ease-in-out;
+}
+
+.container:hover {
+   box-shadow: 0px 5px 15px rgba(0,0,0,0.3);
 }
 
 .teams {
