--- a/app/components/CreateBet/ChooseTeam.css
+++ b/app/components/CreateBet/ChooseTeam.css
@@ -41,11 +41,8 @@
 }
 
 .lineContainer h3 {
-   display: inline-block;
-   vertical-align: top;
-   margin-left: 10px;
+   text-align: center;
    text-transform: uppercase;
-   margin-right: 50px;
 }
 
 .lineContainer input[type=number] {
@@ -55,7 +52,7 @@
    outline: none;
    color: #FFF;
    text-align: center;
-   width: 250px;
+   width: 100%;
 }
 
 .valueContainer {
@@ -85,5 +82,6 @@
    font-size: 30px;
    width: 100px;
    color: #FFF;
+   text-align: center;
 }
 
