need to finish the confirm bet page. work on some wallet stuff and set up server/db

--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -12,6 +12,18 @@
    vertical-align: middle;
 }
 
+.currencies span {
+   margin: 0 5px;
+   cursor: pointer;
+   vertical-align: middle;
+}
+
+.active {
+   color: #D7A060;
+   font-weight: bold;
+   font-size: 1.3em;
+}
+
 .logo {
    text-align: center;
 }
