--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -15,13 +15,10 @@
 .currencies span {
    margin: 0 5px;
    cursor: pointer;
-   vertical-align: middle;
 }
 
-.active {
+.currencies span:hover {
    color: #D7A060;
-   font-weight: bold;
-   font-size: 1.3em;
 }
 
 .logo {
