--- a/app/components/Wallet/Tx.css
+++ b/app/components/Wallet/Tx.css
@@ -4,7 +4,7 @@
 
 .container header {
    text-transform: uppercase;
-   font-family: "Jigsaw Light";
+   font-family: "Jigsaw Medium";
    font-size: 18px;
    padding: 5px 0 5px 25px;
    background: #eee;
