--- a/app/app.global.css
+++ b/app/app.global.css
@@ -96,7 +96,7 @@ a:hover {
    box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.25);
 }
 
-.buttonContainer div {
+.buttonContainer .buttonPrimary, .buttonContainer .buttonSecondary {
    -webkit-user-select: none;
    cursor: pointer;
    display: block;
@@ -115,7 +115,7 @@ a:hover {
    margin-bottom: 5px;
 }
 
-.buttonContainer div:active {
+.buttonContainer .buttonPrimary:active, .buttonContainer .buttonSecondary:active {
    box-shadow:inset 0 1px 1px 1px #302d44;
    transform: translate(0px, 3px);
    outline: 0;
@@ -157,6 +157,11 @@ a:hover {
   border-radius: 50px;
 }
 
+.buttonContainer .circle.small {
+  width: 50px;
+  padding: 10px 0;
+}
+
 /* Slider */
 .InputRange-track {
   height: 0.8rem;
@@ -165,4 +170,178 @@ a:hover {
 .InputRange-slider {
   margin-top: -1rem;
   border: 3px solid #3f51b5;
+}
+
+/* Tooltips */
+[data-hint] {
+  position: relative;
+  /*display: inline-block;*/
+}
+[data-hint]:before,
+[data-hint]:after {
+  position: absolute;
+  will-change: transform;
+  visibility: hidden;
+  opacity: 0;
+  z-index: 900005;
+  pointer-events: none;
+  transition: 0.2s ease;
+  transition-delay: 0ms;
+}
+[data-hint]:hover:before,
+[data-hint]:hover:after {
+  visibility: visible;
+  opacity: 1;
+}
+[data-hint]:before {
+  content: '';
+  position: absolute;
+  background: transparent;
+  border: 6px solid transparent;
+  z-index: 900006;
+}
+[data-hint]:after {
+  content: attr(data-hint);
+  background: #404040;
+  color: #e0e0e0;
+  text-shadow: 0 -1px 0 black;
+  padding: 8px 10px;
+  line-height: 12px;
+  white-space: nowrap;
+  border-radius: 2px;
+  box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.3);
+  letter-spacing: normal;
+  font-size: 12px;
+  font-weight: normal;
+  font-style: inherit;
+  font-family: 'Noto Sans','Lucida Grande','Lucida Sans Unicode',Geneva,Verdana,Sans-Serif;
+}
+.hint--bottom:before,
+.hint--bottom-left:before {
+  border-bottom-color: #404040;
+}
+.hint--top:before,
+.hint--top-left:before {
+  border-top-color: #404040;
+}
+.hint--bottom:before {
+  margin-top: -12px;
+}
+.hint--bottom:after {
+  margin-left: -18px;
+}
+.hint--bottom:before,
+.hint--bottom:after {
+  top: 100%;
+  left: 50%;
+}
+.hint--bottom:hover:after,
+.hint--bottom:hover:before {
+  -webkit-transform: translateY(8px);
+  transform: translateY(8px);
+}
+.hint--top:before {
+  margin-bottom: -12px;
+}
+.hint--top:after {
+  margin-left: -18px;
+}
+.hint--top:before,
+.hint--top:after {
+  bottom: 100%;
+  left: 50%;
+}
+.hint--top:hover:after,
+.hint--top:hover:before {
+  -webkit-transform: translateY(-8px);
+  transform: translateY(-8px);
+}
+.hint--top-left:before {
+  margin-bottom: -12px;
+}
+.hint--top-left:after {
+  margin-right: -6px;
+}
+.hint--top-left:before,
+.hint--top-left:after {
+  bottom: 100%;
+  right: 30%;
+}
+.hint--top-left:hover:after,
+.hint--top-left:hover:before {
+  -webkit-transform: translateY(-8px);
+  transform: translateY(-8px);
+}
+.hint--bottom-left:before {
+  margin-top: -12px;
+}
+.hint--bottom-left:after {
+  margin-right: -6px;
+}
+.hint--bottom-left:before,
+.hint--bottom-left:after {
+  top: 100%;
+  right: 30%;
+}
+.hint--bottom-left:hover:after,
+.hint--bottom-left:hover:before {
+  -webkit-transform: translateY(8px);
+  transform: translateY(8px);
+}
+.hint--left:before {
+  margin-right: -12px;
+  margin-top: -6px;
+}
+.hint--left:after {
+  margin-right: -14px;
+}
+.hint--left:before,
+.hint--left:after {
+  right: 100%;
+  bottom: 50%;
+}
+.hint--left:hover:after,
+.hint--left:hover:before {
+  -webkit-transform: translateX(-8px);
+  transform: translateX(-8px);
+}
+
+/* Modal */
+.modal {
+  width: 500px;
+  margin: 0 auto;
+  position: absolute;
+  top: calc(40% - 250px);
+  left: calc(50% - 250px);
+  background: #464368;
+  outline: none;
+  z-index: -2;
+  /*max-height: 675px;
+  overflow-y: auto;*/
+}
+
+.modalClose {
+  position: absolute;
+  top: -13px;
+  right: -13px;
+  display: block;
+  font-size: 16px;
+  line-height: 27px;
+  width: 32px;
+  height: 32px;
+  background: #2E2B44;
+  border-radius: 50%;
+  color: #FFF;
+  cursor: pointer;
+  text-align: center;
+  z-index: 2;
+}
+
+.modalClose:hover {
+  background: #464368;
+}
+
+.closeIcon {
+  vertical-align: middle;
+  font-size: 1.2em;
 }
