--- a/app/components/Wallet/Wallet.css
+++ b/app/components/Wallet/Wallet.css
@@ -1,7 +1,34 @@
+.loading {
+   text-align: center;
+   font-size: 100px;
+   margin-top: 200px;
+}
+
 .container {
    width: 50%;
    margin: 30px auto;
    font-family: "Jigsaw Medium";
+}
+
+.buttonContainer {
+   text-align: center;
+}
+
+.buttonContainer div {
+   display: inline-block;
+   vertical-align: middle;
+   cursor: pointer;
+   width: 150px;
+   min-width: 0;
+   margin: 0 5px;
+   background: transparent;
+   border: none;
+   box-shadow: none;
+}
+
+.buttonContainer btn {
+   padding: 10px 0 10px 0;
+   display: block;
 }
 
 .header {
@@ -40,7 +67,6 @@
    text-transform: uppercase;
    font-family: "Jigsaw Light";
 }
-
 
 .container header address {
    background-color: #2E2B44;
