forst attempt at implementing sockets with accepting wager

--- a/app/components/Header.css
+++ b/app/components/Header.css
@@ -24,6 +24,15 @@
 .logo {
    text-align: center;
 }
+.disconnected {
+   vertical-align: top;
+}
+
+.disconnected > span {
+   vertical-align: top;
+   color: #E64A19;
+   margin-left: 5px;
+}
 
 .balance {
    text-align: right;
