--- a/app/app.global.css
+++ b/app/app.global.css
@@ -84,7 +84,7 @@ a:hover {
 
 .buttonContainer {
    width: 100%;
-   min-width: 240px;
+   /*min-width: 240px;*/
    margin: 0 auto;
    margin-right: 20px;
    margin-bottom: 20px;
@@ -130,6 +130,16 @@ a:hover {
    box-shadow:inset 0 1px 1px 1px #1f4b2e;
    transform: translate(0px, 3px);
    outline: 0;
+}
+
+.buttonPrimary.inactive {
+  opacity: 0.5;
+  cursor: auto;
+}
+
+.buttonPrimary.inactive:active {
+  box-shadow: none;
+  transform: none;
 }
 
 .buttonContainer .buttonSecondary {
