--- a/app/components/Wallet/Withdraw.css
+++ b/app/components/Wallet/Withdraw.css
@@ -1,9 +1,22 @@
 .container {
-   padding: 30px;
 }
 
-section {
+.withdrawHeader {
+   background: #2E2B44;
    margin-bottom: 20px;
+}
+
+.withdrawHeader h3 {
+   margin: 0;
+   padding: 10px 0;
+   text-align: center;
+   text-transform: uppercase;
+   font-family: 'Jigsaw Light';
+}
+
+.withdrawSection {
+   margin-bottom: 20px;
+   padding: 15px 30px;
 }
 
 .inputContainer {
@@ -32,11 +45,22 @@ input {
    background-color: #FAFAFA;
    font-size: 16px;
    margin: 5px auto 0px auto;
-   width: 90%;
+   width: 95%;
    text-indent: 25px;
 }
 
 input:active, input:focus {
    outline: 0;
    border: 1px solid #58A1FF;
+}
+
+buttonContainer {
+   display: block;
+   width: 50%;
+   margin: 0 auto;
+   text-align: center;
+}
+
+buttonContainer btn span {
+   margin: 0 5px;
 }
