--- a/app/components/Wagers/WagerShow.css
+++ b/app/components/Wagers/WagerShow.css
@@ -27,19 +27,36 @@
    display: block;
 }
 
+.team .user_tx a span {
+   color: #4CAF50;
+   margin-top: 10px;
+   font-size: 40px;
+}
+
 .details {
    width: 50%;
    text-align: center;
-   height: 200px;
-   /*background-color: red;*/
+}
+.details h2, .details h3, .details h4 {
+   margin: 5px 0;
+   color: #414141;
 }
 
 .details h2 {
    font-size: 32px;
-   color: #000;
-   margin: 5px 0;
+}
+
+.details h3 {
+   font-size: 22px;
 }
 
 .details h4 {
+   font-size: 18px;
+}
 
+.details .contract a {
+   color: #06c;
+   text-transform: uppercase;
+   font-size: 20px;
+   text-decoration: underline;
 }
