--- a/app/components/Wagers/OpenWager.css
+++ b/app/components/Wagers/OpenWager.css
@@ -1,8 +1,9 @@
 .container {
-   background: pink;
+   background: #fff;
+   color: #6a6a6a;
+   /*background: transparent;*/
    width: 210px;
    display: inline-block;
-   background: transparent;
    border: 1px solid #ccc;
    padding-bottom: 10px;
    margin: 5px 5px;
