--- a/app/components/Casino/Matchup.css
+++ b/app/components/Casino/Matchup.css
@@ -1,11 +1,31 @@
+/*@import url(https://fonts.googleapis.com/css?family=Press+Start+2P)*/
+
 .matchupContainer {
    cursor: pointer;
    width: 30%;
    display: inline-block;
    background: #EEEEEE;
    vertical-align: top;
-   margin: 5px;
+   margin: 10px;
    color: #414141;
+   position: relative;
+}
+
+.shotClock {
+   /*background: #222;*/
+   position: absolute;
+   padding: 10px;
+   top: -43px;
+   right: 0px;
+   width: 30px;
+}
+
+.shotClockDigit {
+  color: #FFF;
+  display: block;
+  text-align: center;
+  font-family: 'Orbitron';
+  font-size: 30px;
 }
 
 .matchupTitle {
