--- a/app/app.global.css
+++ b/app/app.global.css
@@ -455,3 +455,39 @@ a:hover {
 .strike.active {
   background: #4CAF50;
 }
+
+group.radio {
+  display: flex;
+  border-radius: 3px;
+  overflow: hidden;
+  border: 1px solid #ccc;
+}
+group.radio div {
+  flex: 1 1 auto;
+  position: relative;
+}
+group.radio input {
+  position:absolute;
+  left: -99999px;
+}
+group.radio label {
+  box-sizing: border-box;
+  padding: 10px;
+  background: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor:pointer;
+  border-right: 1px solid #ccc;
+  transition: background 0.13s;
+  -moz-user-select: none;
+  -webkit-user-select: none;
+}
+group.radio div:last-child label {
+  border-right: 0;
+}
+group.radio input:checked + label {
+  background: #2b71b1;
+  font-weight: 500;
+  color: #fff;
+}
