--- a/app/components/Casino/Matchup.css
+++ b/app/components/Casino/Matchup.css
@@ -1,7 +1,4 @@
-/*@import url(https://fonts.googleapis.com/css?family=Press+Start+2P)*/
-
 .matchupContainer {
-   cursor: pointer;
    width: 30%;
    display: inline-block;
    background: #EEEEEE;
@@ -28,25 +25,44 @@
   font-size: 30px;
 }
 
+.bet {
+   position: absolute;
+   padding: 10px;
+   top: -43px;
+   left: 0;
+}
+
+.betValue {
+   color: #FFF;
+   font-family: 'Jigsaw Light';
+   text-align: center;
+   display: block;
+   font-size: 20px;
+}
+
 .matchupTitle {
    border-bottom: 1px solid #ccc;
    padding: 15px;
    text-align: center;
 }
 
-.matchupTitle span {
+.matchupTitle div {
    display: inline-block;
    width: 40%;
    margin: 0 5px;
 }
 
-.matchupTitle span img {
+.matchupTitle div img {
    width: 30px;
    display: block;
    margin: 0 auto;
 }
 
-.pitcher, .batter {
+.matchupTitle div span {
+   display: block;
+}
+
+.pitcher, .batter, .countDetails {
    padding: 15px;
    border-bottom: 1px solid #ccc;
 }
@@ -77,4 +93,10 @@
 .balls, .strikes {
    padding: 0 15px;
    margin: 5px 0;
+}
+
+.detailsDescription {
+   font-family: 'Jigsaw Light';
+   font-size: 18px;
+   padding: 0 15px;
 }
