--- a/app/app.global.css
+++ b/app/app.global.css
@@ -157,7 +157,7 @@ a:hover {
 }
 
 .buttonContainer .buttonSecondary div:active {
-   box-shadow:inset 0 1px 1px 1px #1f4b2e;
+   box-shadow: inset 0 1px 1px 1px #1f4b2e;
    transform: translate(0px, 3px);
    outline: 0;
 }
@@ -187,6 +187,13 @@ a:hover {
   border: none;
   margin: 0 auto;
   width: 80%;
+}
+
+.buttonContainer .small.active {
+  box-shadow: inset 0 1px 1px 1px #1f4b2e;
+  transform: translate(0px, 3px);
+  outline: 0;
+  background: #002280;
 }
 
 .buttonContainer.small .buttonPrimary {
