--- a/app/components/Wallet/Bet.css
+++ b/app/components/Wallet/Bet.css
@@ -22,11 +22,11 @@
 .gameDetails span {
    padding: 50px 0;
    vertical-align: middle;
+   color: #707070;
 }
 
 .betDetails {
    height: 200px;
-   background-color: blue;
    width: 70%;
    display: inline-block;
    vertical-align: top;
