--- a/app/components/Wagers/WagerShow.css
+++ b/app/components/Wagers/WagerShow.css
@@ -2,11 +2,13 @@
    width: 1005px;
    margin: 0 auto;
    color: #6a6a6a;
+   font-family: 'Noto Sans';
 }
 
 .matchup {
-   padding: 50px 0;
-   background: #FFF;
+   padding: 50px 10px;
+   background: #eee;
+   background-image: linear-gradient(to bottom,#d7d7d7 0%,#eeeeee 116px);
 }
 
 .team, .details {
@@ -31,6 +33,42 @@
    color: #4CAF50;
    margin-top: 10px;
    font-size: 40px;
+}
+
+.betDetails {
+   padding: 5px 0;
+   text-align: center;
+   margin-top: 20px;
+   border: 1px solid #ccc;
+}
+
+.betDetails h4 {
+   text-transform: uppercase;
+   font-weight: bold;
+   margin: 0 0 10px 0;
+   border-bottom: 1px solid #ccc;
+}
+
+.betDetails aside {
+   display: inline-block;
+   width: 33%;
+   text-align: center;
+}
+
+.middleDetail {
+   border-left: 1px solid #ccc;
+   border-right: 1px solid #ccc;
+}
+
+.betDetailTitle {
+   text-transform: uppercase;
+   font-weight: 100;
+   color: #bbb;
+   font-size: 10px;
+}
+
+.betDetailData {
+   font-size: 18px;
 }
 
 .details {
@@ -64,6 +102,7 @@
 
 .linescoreContainer {
    text-align: center;
+   margin-top: 25px;
 }
 
 .linescoreContainer table {
@@ -80,7 +119,6 @@
 }
 
 .linescoreContainer tbody {
-   background: #f7f7f7;
 }
 
 .linescoreContainer td, .linescoreContainer th {
@@ -90,9 +128,28 @@
 .linescoreContainer td {
    text-align: center;
    padding: 5px;
+   background: #fff;
+   border: 1px solid #eee;
+   cursor: pointer;
+}
+
+.linescoreContainer .linescoreTeam {
+   border: 1px solid #ccc;
+   padding: 3px;
+   background: linear-gradient(to bottom,rgba(245,245,245,1) 0%,rgba(240,240,240,1) 100%);
+   text-shadow: 0 1px 0 #FFF;
+   color: #848484;
 }
 
 .score {
    font-weight: bold;
    font-family: 'Jigsaw Medium';
+}
+
+.linescoreContainer .score, .linescoreContainer .hits, .linescoreContainer .errors {
+   border: 1px solid #ccc;
+   padding: 3px;
+   background: linear-gradient(to bottom,rgba(245,245,245,1) 0%,rgba(240,240,240,1) 100%);
+   text-shadow: 0 1px 0 #FFF;
+   color: #848484;
 }
