--- a/app/components/Wagers/WagerShow.css
+++ b/app/components/Wagers/WagerShow.css
@@ -6,7 +6,7 @@
 }
 
 .matchup {
-   padding: 50px 10px;
+   padding: 50px 20px;
    background: #eee;
    background-image: linear-gradient(to bottom,#d7d7d7 0%,#eeeeee 116px);
 }
@@ -19,6 +19,8 @@
 .team {
    width: 25%;
    text-align: center;
+   background: #eee;
+   background-image: linear-gradient(to bottom,#d7d7d7 0%,#eeeeee 116px);
 }
 
 .team img {
@@ -68,7 +70,8 @@
 }
 
 .betDetailData {
-   font-size: 18px;
+   font-size: 14px;
+   text-transform: capitalize;
 }
 
 .details {
@@ -135,7 +138,7 @@
 
 .linescoreContainer .linescoreTeam {
    border: 1px solid #ccc;
-   padding: 3px;
+   padding: 3px 15px;
    background: linear-gradient(to bottom,rgba(245,245,245,1) 0%,rgba(240,240,240,1) 100%);
    text-shadow: 0 1px 0 #FFF;
    color: #848484;
