--- a/app/app.global.css
+++ b/app/app.global.css
@@ -100,7 +100,7 @@ a:hover {
    box-shadow: inset 0px 1px 3px 0px rgba(0, 0, 0, 0.25);
 }
 
-.buttonContainer .buttonPrimary, .buttonContainer .buttonSecondary {
+.buttonPrimary, .buttonSecondary {
    -webkit-user-select: none;
    cursor: pointer;
    display: block;
@@ -119,18 +119,18 @@ a:hover {
    margin-bottom: 5px;
 }
 
-.buttonContainer .buttonPrimary:active, .buttonContainer .buttonSecondary:active {
+.buttonPrimary:active, .buttonSecondary:active {
    box-shadow:inset 0 1px 1px 1px #302d44;
    transform: translate(0px, 3px);
    outline: 0;
 }
 
-.buttonContainer .buttonPrimary {
+.buttonPrimary {
    background-color: #45A565;
    box-shadow: 0 3px 0 0 #1f4b2e;
 }
 
-.buttonContainer .buttonPrimary div:active {
+.buttonPrimary div:active {
    box-shadow:inset 0 1px 1px 1px #1f4b2e;
    transform: translate(0px, 3px);
    outline: 0;
@@ -146,17 +146,17 @@ a:hover {
   transform: none;
 }
 
-.buttonContainer .buttonSecondary {
+.buttonSecondary {
   background-color: #58A1FF;
   box-shadow: 0 2px 0 0 #2584ff;
 }
 
-.buttonContainer .buttonSecondary.alert {
+.buttonSecondary.alert {
   background-color: #F44336;
   box-shadow: 0 2px 0 0 #D32F2F;
 }
 
-.buttonContainer .buttonSecondary div:active {
+.buttonSecondary div:active {
    box-shadow: inset 0 1px 1px 1px #1f4b2e;
    transform: translate(0px, 3px);
    outline: 0;
